# pan

./: .buildconfig  .clang-format  .gitignore  README.md  me.scratchspace.Pan.json  meson.build
data/: me.scratchspace.Pan.desktop.in  me.scratchspace.Pan.gschema.xml  me.scratchspace.Pan.metainfo.xml.in  me.scratchspace.Pan.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.c  meson.build  pan-action-create.c  pan-action-create.h  pan-action-delete.c  pan-action-delete.h  pan-action-move.c  pan-action-move.h  pan-action.c  pan-action.h  pan-annot-view.c  pan-annot-view.h  pan-annot.c  pan-annot.h  pan-application.c  pan-application.h  pan-canvas.c  pan-canvas.h  pan-document.c  pan-document.h  pan-record.c  pan-record.h  pan-window.c  pan-window.h  pan-window.ui  pan.gresource.xml  style.css
